[project]
name = "guess-filename-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fuzzywuzzy>=0.18.0",
    "levenshtein>=0.27.1",
    "pudb>=2025.1",
    "pyexiftool>=0.5.6",
    "pypdf>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-colorama>=0.4.15.20250801",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
