[project]
name = "guessfilename"
version = "2026.03.01.1"
description = "Derive a file name according to old file name cues and/or PDF file content"
readme = { file = "README.org", content-type = "text/plain" }
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
authors = [
    { name = "Karl Voit", email = "tools@Karl-Voit.at" },
]
keywords = ["file managing", "file management", "files", "date", "time", "time-stamps"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama>=0.4.6",
    "fuzzywuzzy>=0.18.0",
    "levenshtein>=0.27.1",
    "pudb>=2025.1",
    "pyexiftool>=0.5.6",
    "pypdf>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/novoid/guess-filename.py"
Download = "https://github.com/novoid/guess-filename.py/zipball/master"

[project.scripts]
guessfilename = "guessfilename:main"

[[tool.uv.index]]
name = "guessfilename"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-colorama>=0.4.15.20250801",
]

[tool.setuptools.packages.find]
include = ["guessfilename*"]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
ignore_missing_imports = true
